<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="SystemControlWord" Id="{464360f9-6205-428d-8066-35a5981b9b66}">
    <Declaration><![CDATA[TYPE SystemControlWord :
STRUCT			
	PowerOn			:BOOL;			// Einschalten von Reaktoreinheit
	SekReakt		:INT;			// Definierter sekundär-Reaktor
	Leitung			:INT;			// Definiert welche Leitung verwendet wird
	Temp			:REAL;			// Definierte Temperatur für Heiz- / Kühlprozess
	Enlteermenge	:REAL;			// Zu entleerende Menge
	Pumpmenge		:REAL;			// Zu pumpende Menge
	Haltedauer		:INT;			// Wie lange soll Temperatur gehalten werden (Faktor für Sekunden)
	Ruehrdauer		:INT;			// Wie lange soll gerührt werden (Faktor für Sekunden)
	Wartedauer		:INT;			// Wie lange soll gerührt werden (Faktor für Sekunden)
	Zirkulierdauer	:INT;			// Wie lange soll zirkuliert werden (Faktor für Sekunden)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>